--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "graphql-tag": "^2.12.6",
     "pinia": "^2.0.23",
     "vue": "^3.2.41",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.13.11",
