--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,15 +17,17 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.1",
+    "@vee-validate/zod": "^4.7.2",
     "@vue/apollo-composable": "^4.0.0-beta.1",
     "@vueuse/core": "^9.4.0",
     "element-plus": "^2.2.20",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "pinia": "^2.0.23",
+    "vee-validate": "^4.7.2",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5",
-    "zod": "^3.19.1"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.13.11",
