--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
     "dev": "vite",
     "build": "run-p type-check build-only",
     "build:prod": "NODE_ENV=\"production\" build",
-    "preview": "vite preview",
+    "start": "vite preview",
     "test:unit": "vitest --environment jsdom --root src/",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
