--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,12 +27,17 @@
     "@vee-validate/zod": "^4.7.2",
     "@vue/apollo-composable": "^4.0.0-beta.1",
     "@vueuse/core": "^9.4.0",
+    "@vueuse/integrations": "^9.4.0",
     "element-plus": "^2.2.20",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
+    "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "pinia": "^2.0.23",
+    "sass": "^1.56.0",
     "vee-validate": "^4.7.2",
     "vue": "^3.2.41",
+    "vue-eslint-parser": "^9.1.0",
     "vue-router": "^4.1.5",
     "yup": "^0.32.11"
   },
@@ -48,14 +53,18 @@
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/test-utils": "^2.1.0",
     "@vue/tsconfig": "^0.1.3",
+    "autoprefixer": "^10.4.13",
+    "babel-eslint": "^10.1.0",
     "cypress": "^10.10.0",
     "eslint": "^8.22.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^9.3.0",
     "jsdom": "^20.0.1",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "start-server-and-test": "^1.14.0",
+    "tailwindcss": "^3.2.2",
     "typescript": "~4.7.4",
     "unplugin-auto-import": "^0.11.4",
     "unplugin-vue-components": "^0.22.9",
