--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.1",
+    "@element-plus/icons-vue": "^2.0.10",
     "@vee-validate/zod": "^4.7.2",
     "@vue/apollo-composable": "^4.0.0-beta.1",
     "@vueuse/core": "^9.4.0",
