--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,9 @@
     "test:db:seed": "cd ../backend && DATABASE_URL=\"mysql://team-11:password@it2810-11.idi.ntnu.no/project4_test\" npm run db:seed",
     "test:backend": "cd ../backend && npm run build && DATABASE_URL=\"mysql://team-11:password@it2810-11.idi.ntnu.no/project4_test\" PORT=9090 node . &",
     "test:db:reset": "cd ../backend && DATABASE_URL=\"mysql://team-11:password@it2810-11.idi.ntnu.no/project4_test\" npm run db:reset",
-    "test:e2e:ci": "npm run test:e2e:setup && npx cypress install && cypress run && npm run test:db:reset"
+    "test:e2e:ci": "npm run test:e2e:setup && npx cypress install && cypress run && npm run test:db:reset",
+    "test": "npm run test:unit",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@apollo/client": "^3.7.1",
@@ -48,12 +50,13 @@
     "@graphql-codegen/client-preset": "^1.1.3",
     "@graphql-codegen/typescript-vue-apollo": "^3.3.6",
     "@rushstack/eslint-patch": "^1.1.4",
+    "@types/jest": "^29.2.3",
     "@types/jsdom": "^20.0.0",
     "@types/node": "^16.11.68",
-    "@vitejs/plugin-vue": "^3.1.2",
+    "@vitejs/plugin-vue": "^3.2.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
-    "@vue/test-utils": "^2.1.0",
+    "@vue/test-utils": "^2.2.3",
     "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.13",
     "babel-eslint": "^10.1.0",
@@ -61,7 +64,7 @@
     "eslint": "^8.22.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^9.3.0",
-    "jsdom": "^20.0.1",
+    "jsdom": "^20.0.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
@@ -71,7 +74,7 @@
     "unplugin-auto-import": "^0.11.4",
     "unplugin-vue-components": "^0.22.9",
     "vite": "^3.1.8",
-    "vitest": "^0.24.3",
+    "vitest": "^0.24.5",
     "vue-tsc": "^1.0.8"
   }
 }
