refactor: alter for github release

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,10 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "test:e2e:setup": "npm run test:db:migrate && npm run test:db:seed && npm run test:backend",
     "test:e2e": "npm run test:e2e:setup & cypress open",
-    "test:db:migrate": "cd ../backend && DATABASE_URL=\"mysql://team-11:password@it2810-11.idi.ntnu.no/project4_test\" npm run db:migrate:deploy",
-    "test:db:seed": "cd ../backend && DATABASE_URL=\"mysql://team-11:password@it2810-11.idi.ntnu.no/project4_test\" npm run db:seed",
-    "test:backend": "cd ../backend && npm run build && DATABASE_URL=\"mysql://team-11:password@it2810-11.idi.ntnu.no/project4_test\" PORT=9090 node . &",
-    "test:db:reset": "cd ../backend && DATABASE_URL=\"mysql://team-11:password@it2810-11.idi.ntnu.no/project4_test\" npm run db:reset",
+    "test:db:migrate": "cd ../backend && DATABASE_URL=\"postgresql://myuser:mypassword@localhost:5432/mydatabase\" npm run db:migrate:deploy",
+    "test:db:seed": "cd ../backend && DATABASE_URL=\"postgresql://myuser:mypassword@localhost:5432/mydatabase\" npm run db:seed",
+    "test:backend": "cd ../backend && npm run build && DATABASE_URL=\"postgresql://myuser:mypassword@localhost:5432/mydatabase\" PORT=9091 node . &",
+    "test:db:reset": "cd ../backend && DATABASE_URL=\"postgresql://myuser:mypassword@localhost:5432/mydatabase\" npm run db:reset",
     "test:e2e:ci": "npm run test:e2e:setup && npx cypress install && cypress run && npm run test:db:reset",
     "test": "npm run test:unit",
     "coverage": "vitest run --coverage"
