--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-PORT=9090
-DATABASE_URL="mysql://team-11:password@it2810-11.idi.ntnu.no:3306/project4" 
+PORT=9091
+DATABASE_URL="postgresql://myuser:mypassword@localhost:5432/mydatabase"
